Adds controller tests

--- a/Bliss.Api/appsettings.json
+++ b/Bliss.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "QuestionsCollectionName": "Questions",
+    "ConnectionString": "mongodb+srv://bliss:n6M7WT4FfQW24YY9@cluster0.xkqgr.mongodb.net/<dbname>?retryWrites=true&w=majority",
+    "DatabaseName": "BlissInterview"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
