--- a/Bliss.Api.Tests/Bliss.Api.Tests.csproj
+++ b/Bliss.Api.Tests/Bliss.Api.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Moq" Version="4.15.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
@@ -14,6 +15,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Bliss.Api\Bliss.Api.csproj" />
+     <None Include="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
